// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders prayer PrayerTab 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "paddingBottom": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "Colfax-Bold",
              "fontSize": 16,
              "lineHeight": 23.04,
            }
          }
        >
          There are no prayers yet for your 
        </Text>
        <Text
          bold={false}
          italic={false}
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "Colfax-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            }
          }
        >
          Be the first to add one!
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`renders prayer tab with content 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 16,
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "paddingBottom": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#ffffff",
              "fontFamily": "Colfax-Bold",
              "fontSize": 16,
              "lineHeight": 23.04,
            }
          }
        >
          You do not have any saved prayers
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
